# CrewAI-project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  report.md  requirements.txt
frontend/: .dockerignore  Dockerfile  nginx.conf
frontend/src/: App.css  App.jsx
frontend/src/components/: CrewForm.css  CrewForm.jsx  Header.css  Header.jsx  ResultDisplay.css  ResultDisplay.jsx
src/my_crew/: api.py  crew.py  main.py
src/my_crew/config/: agents.yaml  tasks.yaml
