[project]
name = "my_crew"
version = "0.1.0"
description = "my-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0"
]

[project.scripts]
my_crew = "my_crew.main:run"
run_crew = "my_crew.main:run"
train = "my_crew.main:train"
replay = "my_crew.main:replay"
test = "my_crew.main:test"
server = "my_crew.api:start_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
